# gitops-monorepo-manifest

./: Cargo.toml  LICENSE  README.md  generate_test_repo.sh  justfile
.github/workflows/: ci.yaml  release.yml
src/: git.rs  main.rs  manifest.rs
tests/: chain.yaml  happy.yaml  recursive.yaml
