[package]
name = "manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
git2 = "0.16.1"
glob = "0.3.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
rstest = "0.17.0"
