[package]
name = "manifest"
version = "0.1.13"
edition = "2021"
repository = "https://github.com/kryptn/gitops-monorepo-manifest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.14", features = ["derive"] }
git2 = { version = "0.17.2", default-features = false, features = ["vendored-openssl", "ssh", "ssh_key_from_memory", "https"] }
glob = "0.3.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.106"
serde_yaml = "0.9.23"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
rstest = "0.18.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.69.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = ["shell"]


